--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [3.10] 
+        python-version: [3.10]
 
     steps:
     - uses: actions/checkout@v3
@@ -27,8 +27,7 @@ jobs:
     - name: Run flake8
       run: |
         echo "Running flake8..."
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=88 --statistics
+        flake8 . --count --max-complexity=10 --max-line-length=88 --statistics
 
     - name: Run tests with pytest
       run: |
